[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
author =Fujun Sun
author_email = sfjdx1144@live.com
license_files = LICENSE
desciption-file = README.md
long_description_content_type = text/markdown
url = https://github.com/sfjdx1144/biomagicbox
project_urls =
    Bug Tracker = https://github.com/sfjdx1144/biomagicbox/issues


[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=1